test/tests/bad/recursive-var-def.carth
;; RecursiveVarDef

(defvar foo :of Int (+ foo 1))
